--- a/src/app/page/approver/approver.component.html
+++ b/src/app/page/approver/approver.component.html
@@ -3,6 +3,8 @@
       <h1>Welcome Admin to Approver Management</h1>
       <!-- <h3>Approver Management</h3> -->
       <!-- <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p> -->
+      <iframe *ngFor="let vedio of vedios" class="e2e-iframe-trusted-src" width="200" height="200" [src]="vedio.id | apiYoutube"></iframe>
+      <!-- <iframe  class="e2e-iframe-trusted-src" width="200" height="200" [src]="link | apiYoutube"></iframe> -->
       
   </div>
   <br>
